--- a/index.html
+++ b/index.html
@@ -24,23 +24,16 @@
 
             <main>
                 <div class="pomodoro">
-                    <!-- Timer input fields for adjusting minutes and seconds -->
                     <div id="pomodoro-timer" class="timer-display" data-duration="25.00">
-                        <input type="number" id="pomodoro-minutes" class="time-input" value="25" min="0" max="60">
-                        <span>:</span>
-                        <input type="number" id="pomodoro-seconds" class="time-input" value="00" min="0" max="59">
+                        <h1 class="time">25:00</h1>
                     </div>
 
                     <div id="short-timer" class="timer-display" data-duration="5.00">
-                        <input type="number" id="short-minutes" class="time-input" value="5" min="0" max="60">
-                        <span>:</span>
-                        <input type="number" id="short-seconds" class="time-input" value="00" min="0" max="59">
+                        <h1 class="time">5:00</h1>
                     </div>
 
                     <div id="long-timer" class="timer-display" data-duration="10.00">
-                        <input type="number" id="long-minutes" class="time-input" value="10" min="0" max="60">
-                        <span>:</span>
-                        <input type="number" id="long-seconds" class="time-input" value="00" min="0" max="59">
+                        <h1 class="time">10:00</h1>
                     </div>
                 </div>
             </main>
