--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div id="timer-message">Please select a timer before starting.</div>
+    <div id="timer-message"></div>
 
     <div class="container">
         <div class="timer">
@@ -45,7 +45,6 @@
         </div>
     </div>
 
-    <!-- JS -->
     <script src="script.js"></script>
 </body>
 
